Remove NOT_SPECIFIED de la liste de programmes de l'API