@@ -6,6 +6,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,8 +18,10 @@ public class ProgrammeController {
 
     @GetMapping
     public List<String> getProgrammes() {
-        return Arrays.stream(Programme.values())
+        List<String> programmes = new ArrayList<>(Arrays.stream(Programme.values())
                 .map(Programme::toString)
-                .collect(Collectors.toList());
+                .toList());
+        programmes.remove("NOT_SPECIFIED");
+        return programmes;
     }
 }
